--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "scratch-vscode",
+	"name": "scratch-vscode",
 	"displayName": "scratch-vscode",
-	"description": "Integrated Scratch project viewer",
+	"description": "Preview Scratch .sb3 project files",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.68.0"
@@ -10,31 +10,36 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:scratch-vscode.helloWorld"
+		"onCommand:scratch-vscode.helloWorld"
 	],
-	"main": "./extension.js",
+	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [{
-            "command": "scratch-vscode.helloWorld",
-            "title": "Hello World"
-
-		}]
+		"commands": [
+			{
+				"command": "scratch-vscode.helloWorld",
+				"title": "Hello World"
+			}
+		]
 	},
 	"scripts": {
-		"lint": "eslint .",
-		"pretest": "npm run lint",
-		"test": "node ./test/runTest.js"
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"pretest": "npm run compile && npm run lint",
+		"lint": "eslint src --ext ts",
+		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-        "@types/vscode": "^1.68.0",
-        "@types/glob": "^7.2.0",
-        "@types/mocha": "^9.1.1",
-        "@types/node": "16.x",
-        "eslint": "^8.16.0",
-        "glob": "^8.0.3",
-        "mocha": "^10.0.0",
-        "typescript": "^4.7.2",
-        "@vscode/test-electron": "^2.1.3"
-    }
-
+		"@types/vscode": "^1.68.0",
+		"@types/glob": "^7.2.0",
+		"@types/mocha": "^9.1.1",
+		"@types/node": "16.x",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "^8.16.0",
+		"glob": "^8.0.3",
+		"mocha": "^10.0.0",
+		"typescript": "^4.7.2",
+		"@vscode/test-electron": "^2.1.3"
+	}
 }
