--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
 		"Other"
 	],
 	"activationEvents": [
+		"onCustomEditor:scratch-vscode.scratchViewer",
 		"onCommand:scratch-vscode.helloWorld"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
+		"customEditors": [
+			{
+				"viewType": "scratch-vscode.scratchViewer",
+				"displayName": "Scratch Project",
+				"selector": [
+					{
+						"filenamePattern": "*.sb3"
+					}
+				]
+			}
+		],
 		"commands": [
 			{
 				"command": "scratch-vscode.helloWorld",
