--- a/package.json
+++ b/package.json
@@ -35,23 +35,32 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
+		"compile": "tsc -p ./ && npx webpack",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.68.0",
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^9.1.1",
 		"@types/node": "16.x",
+		"@types/vscode": "^1.68.0",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
+		"@vscode/test-electron": "^2.1.3",
 		"eslint": "^8.16.0",
 		"glob": "^8.0.3",
 		"mocha": "^10.0.0",
 		"typescript": "^4.7.2",
-		"@vscode/test-electron": "^2.1.3"
+		"webpack-cli": "^4.10.0"
+	},
+	"dependencies": {
+		"@vscode/codicons": "^0.0.31",
+		"scratch-audio": "^0.1.0-prerelease.20200528195344",
+		"scratch-render": "^0.1.0-prerelease.20211028200436",
+		"scratch-storage": "^2.0.2",
+		"scratch-svg-renderer": "^0.2.0-prerelease.20210727023023",
+		"scratch-vm": "^0.2.0-prerelease.20220602121716"
 	}
 }
