Add repo url to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"displayName": "scratch-vscode",
 	"description": "Preview Scratch .sb3 project files",
 	"version": "0.0.1",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/DavidBuchanan314/scratch-vscode.git"
+	},
 	"engines": {
 		"vscode": "^1.68.0"
 	},
