--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,6 +1,7 @@
 .vscode/**
 .vscode-test/**
 src/**
+viewer-src/**
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
@@ -8,3 +9,5 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+node_modules/
+!node_modules/@vscode/codicons/dist/
